--- a/views/loginSignup.pug
+++ b/views/loginSignup.pug
@@ -1,10 +1,9 @@
 extends base 
 
-block script
+block style
     link(rel="stylesheet", href="/css/loginSignup.css")
 
 block content
-
     - if(login === true) 
         include _login
     - else 
