--- a/views/_withJourney.pug
+++ b/views/_withJourney.pug
@@ -1,3 +1,82 @@
-// Main
+extends base
 
-p Hello user
+block style
+    link(rel="stylesheet", href="/css/withJourney.css")
+
+block content
+    .top--container 
+        img(src="/image/12-dots.png", alt="12 Dots" class="dots")
+        div(class="nav")
+            img(src="/image/profile pic.png", alt="profile" class="profile")
+
+    span(class="label--welcome") Hola!! May Your trip will be Enjoyable!
+    
+    div(class="payment-option")
+        button(id="pay") Add Payment
+        button(id="end") End the Trip
+    .total--spending 
+        span(class="label--total") Total Spending
+        div(class="label--cost top") ₹10,000
+    
+    div(id="spending")
+        div(id="sp1")
+            div(class="c1")
+                div(class="payer") Aayush  
+                div(class="purpose") For Tickets
+            div(class="c2")
+                div(class="date") 12/02/2022
+                div(class="payment_mode") Cash
+            div
+                div(class="label--cost") ₹10,000
+        
+        div(id="sp2")
+            div(class="c1")
+                div(class="payer") Aayush  
+                div(class="purpose") For Tickets
+            div(class="c2")
+                div(class="date") 12/02/2022
+                div(class="payment_mode") Cash
+            div
+                div(class="label--cost") ₹10,000
+        div(id="sp3")
+            div(class="c1")
+                div(class="payer") Aayush  
+                div(class="purpose") For Tickets
+            div(class="c2")
+                div(class="date") 12/02/2022
+                div(class="payment_mode") Cash
+            div
+                div(class="label--cost") ₹10,000
+        
+        div(id="sp4")
+            div(class="c1")
+                div(class="payer") Aayush  
+                div(class="purpose") For Tickets
+            div(class="c2")
+                div(class="date") 12/02/2022
+                div(class="payment_mode") Cash
+            div
+                div(class="label--cost") ₹10,000
+        
+        div(id="sp5")
+            div(class="c1")
+                div(class="payer") Aayush  
+                div(class="purpose") For Tickets
+            div(class="c2")
+                div(class="date") 12/02/2022
+                div(class="payment_mode") Cash
+            div
+                div(class="label--cost") ₹10,000
+        
+        div(id="sp6")
+            div(class="c1")
+                div(class="payer") Aayush  
+                div(class="purpose") For Tickets
+            div(class="c2")
+                div(class="date") 12/02/2022
+                div(class="payment_mode") Cash
+            div
+                div(class="label--cost") ₹10,000
+        
+    .bottom--design 
+        img(src="/image/bottom-design.png", alt="bottom" class="bottom")   
