--- a/views/_withJourney.pug
+++ b/views/_withJourney.pug
@@ -27,26 +27,26 @@ block content
                 div(class="date") 12/02/2022
                 div(class="payment_mode") Cash
             div
-                div(class="label--cost") ₹10,000
+                div(class="label--cost") ₹1000
         
         div(id="sp2")
             div(class="c1")
-                div(class="payer") Aayush  
+                div(class="payer") Sakshi  
                 div(class="purpose") For Tickets
             div(class="c2")
                 div(class="date") 12/02/2022
                 div(class="payment_mode") Cash
             div
-                div(class="label--cost") ₹10,000
+                div(class="label--cost") ₹2000
         div(id="sp3")
             div(class="c1")
-                div(class="payer") Aayush  
+                div(class="payer") Anushtha  
                 div(class="purpose") For Tickets
             div(class="c2")
                 div(class="date") 12/02/2022
                 div(class="payment_mode") Cash
             div
-                div(class="label--cost") ₹10,000
+                div(class="label--cost") ₹2400
         
         div(id="sp4")
             div(class="c1")
@@ -56,27 +56,27 @@ block content
                 div(class="date") 12/02/2022
                 div(class="payment_mode") Cash
             div
-                div(class="label--cost") ₹10,000
+                div(class="label--cost") ₹3400
         
         div(id="sp5")
             div(class="c1")
-                div(class="payer") Aayush  
+                div(class="payer")  Harshita
                 div(class="purpose") For Tickets
             div(class="c2")
                 div(class="date") 12/02/2022
                 div(class="payment_mode") Cash
             div
-                div(class="label--cost") ₹10,000
+                div(class="label--cost") ₹200
         
         div(id="sp6")
             div(class="c1")
-                div(class="payer") Aayush  
+                div(class="payer") Harshita  
                 div(class="purpose") For Tickets
             div(class="c2")
                 div(class="date") 12/02/2022
                 div(class="payment_mode") Cash
             div
-                div(class="label--cost") ₹10,000
+                div(class="label--cost") ₹1000
         
     .bottom--design 
         img(src="/image/bottom-design.png", alt="bottom" class="bottom")   
