--- a/views/home.pug
+++ b/views/home.pug
@@ -4,7 +4,7 @@ block style
     link(rel="stylesheet", href="/css/home.css")
 
 block content
-    - if (journey === true) 
+    - if (room === true) 
         include _withJourney
     - else 
         include _withoutJourney
