--- a/views/profile.pug
+++ b/views/profile.pug
@@ -52,5 +52,7 @@ block content
         .illustration 
             img(src="/image/profile-illustration.png", alt="profile-illus" class="profile-illustration")
 
+    
     .bottom--design 
+        a(class="btn-design logout", href="/") Log Out
         img(src="/image/bottom-design.png", alt="bottom" class="bottom")
