--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -50,6 +50,7 @@ body {
 	border-radius: 50px;
 	display: flex;
 	align-items: center;
+	cursor: pointer;
 }
 
 .btn--invite {
@@ -159,4 +160,18 @@ body {
 	display: flex;
 	justify-content: flex-end;
 	height: 120px;
+	position: fixed;
+	bottom: 0;
+	right: 0;
+}
+
+.logout {
+	border: 4px solid red;
+	height: 50%;
+	margin: auto;
+	margin-right: 7rem;
+	text-decoration: none;
+	color: red;
+	font-weight: bold;
+	background-color: #fff;
 }
