--- a/public/css/withJourney.css
+++ b/public/css/withJourney.css
@@ -50,46 +50,46 @@ body {
 	font-weight: 500;
 }
 
-.payment-option{
-    display: flex;
-    justify-content: space-between;
+.payment-option {
+	display: flex;
+	justify-content: space-between;
 }
 
-button{
-    background: rgb(100, 169, 165);
-    color: #F0F5F8;
-    font-weight: 400;
-    font-size: 1.5rem;
-    border: none;
-    border-radius: 50px;
-    padding: 0.6rem 1.9rem;
-    cursor: pointer;
-    margin-top: 2%;
+button {
+	background: rgb(100, 169, 165);
+	color: #f0f5f8;
+	font-weight: 400;
+	font-size: 1.5rem;
+	border: none;
+	border-radius: 50px;
+	padding: 0.6rem 1.9rem;
+	cursor: pointer;
+	margin-top: 2%;
 }
 
-button:hover{
-    box-shadow: 0rem 0.1rem 0.1rem rgba(100, 169, 165, 0.1);
+button:hover {
+	box-shadow: 0rem 0.1rem 0.1rem rgba(100, 169, 165, 0.1);
 }
 
-#pay{
-    margin-left: 10%;
+#pay {
+	margin-left: 10%;
 }
 
-#end{
-    background: #F0F5F8;
-    color: #64A9A5;
-    border: 4px solid #64a9a5; 
-    margin-right: 43%;
+#end {
+	background: #f0f5f8;
+	color: #64a9a5;
+	border: 4px solid #64a9a5;
+	margin-right: 43%;
 }
 
-button:hover{
-    box-shadow: 0px 15px 20px rgba(100, 169, 165, 0.4);
+button:hover {
+	box-shadow: 0px 15px 20px rgba(100, 169, 165, 0.4);
 }
 
-#tot{
-    display: flex;
-    justify-content: space-between;
-    width: 70%;
+#tot {
+	display: flex;
+	justify-content: space-between;
+	width: 70%;
 }
 
 .total--spending {
@@ -98,66 +98,72 @@ button:hover{
 	margin-top: 4rem;
 	font-size: 2rem;
 	width: 100%;
-    margin-bottom: 2rem;
+	margin-bottom: 2rem;
 }
 
 .label--total {
 	margin-left: 10%;
-    margin-bottom: 2%;
+	margin-bottom: 2%;
 }
 
 .label--cost {
 	margin-right: 2rem;
-    margin-bottom: 2%;
+	margin-bottom: 2%;
 	background-color: #64a9a5;
 	padding: 0.2rem 1.4rem;
 	border-radius: 50px;
 }
 
-.top{
-    margin-right: 15%;
+.top {
+	margin-right: 15%;
 }
 
-#spending{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-left: 10%;
+#spending {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	margin-left: 10%;
 }
 
-.cost{
+.cost {
 	background-color: #64a9a5;
 	padding: 0.1em 1.4em;
 	border-radius: 50px;
-    width: 15em;
-    height: 5em;
-    font-weight: 400;
-    text-align: center;
+	width: 15em;
+	height: 5em;
+	font-weight: 400;
+	text-align: center;
 }
 
-#sp1,#sp2,#sp3,#sp4,#sp5,#sp6{
-    background-color: white;
-    width: 65%;
-    height: 5rem;
-    padding: 1rem;
-    margin-bottom: 2rem;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.20);
-    display: flex;
-    justify-content: space-between;
+#sp1,
+#sp2,
+#sp3,
+#sp4,
+#sp5,
+#sp6 {
+	background-color: white;
+	width: 65%;
+	height: 5rem;
+	padding: 1rem;
+	margin-bottom: 2rem;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+	display: flex;
+	justify-content: space-between;
 }
-.c1{
-    margin-left: 2%;
+.c1 {
+	margin-left: 2%;
 }
-.c2{
-    margin-left: 50%;
+.c2 {
+	margin-left: 50%;
 }
 
-.purpose{
-    color: #7D7474;
+.purpose {
+	color: #7d7474;
 }
 
-.date,.payment_mode{
-    color: #64A9A5;
+.date,
+.payment_mode {
+	color: #64a9a5;
 }
 
 .bottom--design {
