--- a/views/profile.pug
+++ b/views/profile.pug
@@ -54,5 +54,7 @@ block content
 
     
     .bottom--design 
-        a(class="btn-design logout", href="/") Log Out
+        button(class="btn-design logout") Log Out
         img(src="/image/bottom-design.png", alt="bottom" class="bottom")
+
+    script(src="/js/logout.js") 
